Add more conversion formats

--- a/ServiceMenus/reimage-convert-rotate.desktop
+++ b/ServiceMenus/reimage-convert-rotate.desktop
@@ -18,7 +18,7 @@
 #
 
 [Desktop Entry]
-Actions=jpeg;png;gif;tiff;webp;_SEPARATOR_;pdf;pdfa;_SEPARATOR_;agif;favicons;base64;convert_custom;formats;_SEPARATOR_;rotate_90;rotate_180;rotate_270;rotate_custom;auto;_SEPARATOR_;flip;flop;_SEPARATOR_;
+Actions=avif;heic;jpeg;jxl;png;gif;tiff;webp;_SEPARATOR_;pdf;pdfa;_SEPARATOR_;agif;favicons;base64;convert_custom;formats;_SEPARATOR_;rotate_90;rotate_180;rotate_270;rotate_custom;auto;_SEPARATOR_;flip;flop;_SEPARATOR_;
 MimeType=image/*
 Name=ReImage convert and rotate service menu
 ServiceTypes=KonqPopupMenu/Plugin,image/*
@@ -29,17 +29,35 @@ X-KDE-Submenu[it]=ReImage - Conversione e rotazione
 
 ################################################################################
 
+[Desktop Action avif]
+Exec=reimage-kdialog convert avif %F
+Icon=image-avif
+Name=Convert to AVIF
+Name[it]=Converti in AVIF
+
 [Desktop Action gif]
 Exec=reimage-kdialog convert gif %F
 Icon=image-gif
 Name=Convert to GIF
 Name[it]=Converti in GIF
 
+[Desktop Action heic]
+Exec=reimage-kdialog convert heic %F
+Icon=image-heic
+Name=Convert to HEIF
+Name[it]=Converti in HEIF
+
 [Desktop Action jpeg]
 Exec=reimage-kdialog convert jpg %F
 Icon=image-jpeg
 Name=Convert to JPEG
 Name[it]=Converti in JPEG
+
+[Desktop Action jxl]
+Exec=reimage-kdialog convert jxl %F
+Icon=image-jxl
+Name=Convert to JXL
+Name[it]=Converti in JXL
 
 [Desktop Action png]
 Exec=reimage-kdialog convert png %F
