--- a/ServiceMenus/reimage-compress-resize.desktop
+++ b/ServiceMenus/reimage-compress-resize.desktop
@@ -18,10 +18,9 @@
 #
 
 [Desktop Entry]
-Actions=progressive;optimize;_SEPARATOR_;compress_50;compress_70;compress_75;compress_80;compress_90;custom_compress;_SEPARATOR_;resize_25;resize_33;resize_50;resize_67;resize_75;_SEPARATOR_;320x240;800x600;1024x768;1200x900;1400x1050;1920x1080;1920x1200;2560x1080;2560x1440;2560x1600;3440x1440;3840x2160;5120x2160;custom_resize;_SEPARATOR_;
+Actions=progressive;optimize;_SEPARATOR_;compress_50;compress_70;compress_75;compress_80;compress_90;custom_compress;_SEPARATOR_;resize_25;resize_33;resize_50;resize_67;resize_75;_SEPARATOR_;320x240;800x600;1024x768;1200x900;1400x1050;1920x1080;1920x1200;2560x1080;2560x1440;2560x1600;3440x1440;3840x2160;5120x2160;custom_resize;
 MimeType=image/*
 Name=ReImage compress and resize service menu
-ServiceTypes=KonqPopupMenu/Plugin,image/*
 TryExec=reimage-kdialog
 Type=Service
 X-KDE-Submenu=ReImage - Compress and resize
@@ -100,7 +99,7 @@ Name[it]=Ridimensiona al 50%
 [Desktop Action resize_67]
 Exec=reimage-kdialog resize 67% %F
 Icon=image-resize-symbolic
-Name=Resize at 33%
+Name=Resize at 67%
 Name[it]=Ridimensiona al 67%
 
 [Desktop Action resize_75]
