--- a/ServiceMenus/reimage-metadata.desktop
+++ b/ServiceMenus/reimage-metadata.desktop
@@ -18,10 +18,9 @@
 #
 
 [Desktop Entry]
-Actions=rfe;rff;_SEPARATOR_;sffe;sffn;_SEPARATOR_;seff;sefn;_SEPARATOR_;add_comment;view_metadata;extract_metadata;_SEPARATOR_;del_comment;del_exif;del_iptc;del_xmp;del_all;_SEPARATOR_;tfe;_SEPARATOR_;
+Actions=rfe;rff;_SEPARATOR_;sffe;sffn;_SEPARATOR_;seff;sefn;_SEPARATOR_;add_comment;view_metadata;extract_metadata;_SEPARATOR_;del_comment;del_exif;del_iptc;del_xmp;del_all;_SEPARATOR_;tfe;
 MimeType=image/jpeg;image/tiff;
 Name=ReImage metadata service menu
-ServiceTypes=KonqPopupMenu/Plugin,image/jpeg,image/tiff
 TryExec=reimage-kdialog
 Type=Service
 X-KDE-Submenu=ReImage - Metadata
