--- a/ServiceMenus/reimage-convert-rotate.desktop
+++ b/ServiceMenus/reimage-convert-rotate.desktop
@@ -18,10 +18,9 @@
 #
 
 [Desktop Entry]
-Actions=avif;heic;jpeg;jxl;png;gif;tiff;webp;_SEPARATOR_;pdf;pdfa;_SEPARATOR_;agif;favicons;base64;convert_custom;formats;_SEPARATOR_;rotate_90;rotate_180;rotate_270;rotate_custom;auto;_SEPARATOR_;flip;flop;_SEPARATOR_;
+Actions=avif;heic;jpeg;jxl;png;gif;tiff;webp;_SEPARATOR_;pdf;pdfa;_SEPARATOR_;favicons;base64;convert_custom;formats;_SEPARATOR_;rotate_90;rotate_180;rotate_270;rotate_custom;auto;_SEPARATOR_;flip;flop;
 MimeType=image/*
 Name=ReImage convert and rotate service menu
-ServiceTypes=KonqPopupMenu/Plugin,image/*
 TryExec=reimage-kdialog
 Type=Service
 X-KDE-Submenu=ReImage - Convert and rotate
