--- a/ServiceMenus/reimage-tools.desktop
+++ b/ServiceMenus/reimage-tools.desktop
@@ -16,6 +16,8 @@
 # 	You should have received a copy of the GNU General Public License
 # 	along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
+# SPDX-License-Identifier: GPL-3.0-or-later
+#
 
 [Desktop Entry]
 Actions=agif;apng;webp;append_right;_SEPARATOR_;gray;sepia;transparent2color;_SEPARATOR_;border;border_transparent;shadow;
