--- a/doc/menu.config
+++ b/doc/menu.config
@@ -2,10 +2,10 @@
 # http://www.kde-apps.org/content/show.php/Service+Menu+Manager?content=94996
 
 [General]
-name=ReImage service menu
+name=ReImage Service Menu
 description=Manipulate images and their metadata. Required ImageMagick, kdialog and jhead packages.
 author=Giuseppe Benigno
 author_email=giuseppe.benigno@gmail.com
 homepage=https://www.egregorion.net
 version=2.6.0
-licence=GPL
+licence=GPL-3.0-or-later
