--- a/ServiceMenus/reimage-compress-resize.desktop
+++ b/ServiceMenus/reimage-compress-resize.desktop
@@ -16,6 +16,8 @@
 # 	You should have received a copy of the GNU General Public License
 # 	along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
+# SPDX-License-Identifier: GPL-3.0-or-later
+#
 
 [Desktop Entry]
 Actions=progressive;optimize;_SEPARATOR_;compress_50;compress_70;compress_75;compress_80;compress_90;custom_compress;_SEPARATOR_;resize_25;resize_33;resize_50;resize_67;resize_75;_SEPARATOR_;320x240;800x600;1024x768;1200x900;1400x1050;1920x1080;1920x1200;2560x1080;2560x1440;2560x1600;3440x1440;3840x2160;5120x2160;custom_resize;
