--- a/ServiceMenus/reimage-convert-rotate.desktop
+++ b/ServiceMenus/reimage-convert-rotate.desktop
@@ -16,6 +16,8 @@
 # 	You should have received a copy of the GNU General Public License
 # 	along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
+# SPDX-License-Identifier: GPL-3.0-or-later
+#
 
 [Desktop Entry]
 Actions=avif;heic;jpeg;jxl;png;gif;tiff;webp;_SEPARATOR_;pdf;pdfa;_SEPARATOR_;favicons;base64;convert_custom;formats;_SEPARATOR_;rotate_90;rotate_180;rotate_270;rotate_custom;auto;_SEPARATOR_;flip;flop;
